# Radio

./: .directory  FreqControl_20120613.tar.bz2  Listener.tar.bz2  README.md  RadioServer.tar.bz2  firmware_20120613.tar.bz2  index.html  screenshots.html
FreqControl/: Makefile  channel.list  opendevice.c  setfreq  setfreq.c
Listener/: CMakeLists.txt  Listener.cpp  Listener.h  Listener.kdev4  audioplayer.cpp  audioplayer.h  main.cpp  networkmanager.cpp  networkmanager.h
Listener/.kdev4/: Listener.kdev4
RadioServer/: CMakeLists.txt  RadioServer.cpp~  RadioServer.h  RadioServer.kdev4  main.cpp  networkmanager.cpp  networkmanager.cpp~  networkmanager.h  radioinput.cpp  radioinput.h
RadioServer/.kdev4/: RadioServer.kdev4
Schematics/: USBRadio.qet
WaveRadio/: CMakeLists.txt  WaveRadio.cpp  WaveRadio.h  WaveRadio.kdev4  aboutwidget.cpp  aboutwidget.h  main.cpp  waveradiobackend.cpp  waveradiobackend.h  wavewidget.cpp  wavewidget.h
WaveRadio/.kdev4/: WaveRadio.kdev4
firmware/: Makefile  dumpped.eep  ir.h  lcd1602.c  lcd1602.h  main.c  main.eep  main.elf  main.hex  readout_eeprom.sh  requests.h  tea5767.c  tostring.c  tostring.h
firmware_20120614/: Makefile  lcd1602.c  lcd1602.h  main.c  main.eep  main.elf  main.hex  requests.h  tea5767.c  tea5767.h  usbconfig.h
old/: FreqControl.tar.bz2
old/firmware/: debug.c  debug.h  requests.h  testTune5767.aps  testTune5767.c  testtune5767.aws
old/firmware/DRadio/: DRadio.c  DRadio.h  Global.h  TEA5767.c  TEA5767.h
owr-qml/: Makefile  main.cpp  main.qml  moc_owr.cpp  owr-qml  owr.cpp  owr.h  owr.pro
(+11 files in other folders)
